<resources>
    <string name="app_name">DLSU Guide App</string>
    <string name="app_logo">DLSU Guide App logo</string>

    <string name="back_button">Back</string>

    <!-- LoginActivity & RegisterActivity Strings -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="signup">Sign Up</string>
    <string name="btn_register">Register New Account</string>
    <string name="btn_login">Login</string>
    <string name="enter_id_no">Enter ID</string>
    <string name="hint_id_no">ID Number</string>
    <string name="enter_username">Enter Username</string>
    <string name="hint_username">Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="hint_password">Password</string>
    <string name="enter_confirm_password">Re-enter Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="enter_dlsu_email">Enter DLSU email</string>
    <string name="hint_dlsu_email">DLSU email</string>
    <string name="login_text">Already have an Account?</string>
    <string name="login_here">Login here</string>

    <!-- DirectoryActivity and DirectoryListFragment Strings -->
    <string name="dl_img_contentDesc">Directory Image</string>
    <string name="dl_name_placeholder">Name of POI</string>
    <string name="dl_location">Location:</string>
    <string name="dl_tag">Tag:</string>
    <string name="directory_total_rate">Rate: </string>
    <string name="directory_location_contentDesc">Location Icon</string>
    <string name="directory_review_title">Reviews</string>
    <string name="directory_rate_contentDesc">Rate Icon</string>
    <string name="directory_rate_title">Rate and review</string>
    <string name="more_reviews">MORE REVIEWS</string>
    <string name="reviewer_placeholder">NAME OF USER</string>
    <string name="default_rate">0.0</string>

    <!-- ReviewActivity Strings -->
    <string name="review_image">Review Image</string>
    <string name="review_rate">Rate: </string>
    <string name="review_content_placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lacinia, risus eget lobortis volutpat, justo risus sodales eros, nec aliquam neque ante nec nulla. Nullam pretium tempus massa, non consequat tellus tristique nec. Phasellus ligula quam, scelerisque in diam placerat, dignissim tincidunt magna. Nunc quis augue elit. Nunc vestibulum pellentesque auctor. Duis porttitor commodo pharetra. Maecenas quis augue felis. Vestibulum vel lacus sagittis nisi pellentesque tincidunt. Cras tempus eget tortor eu fermentum. Nam fringilla rhoncus felis. Fusce faucibus diam non leo cursus, et lobortis nunc placerat. Morbi et malesuada ex. Sed eu gravida sem.</string>
    <string name="review_date_placeholder">January 1, 2023</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoic29sb21vbi1jYXN0aWxsbyIsImEiOiJjbG94dXQ1cTUwMDRxMmpyNmhxMWIyejlsIn0.CnjXH0u5RInYXgO9YUcIVA</string>

    <!-- AddMarkerActivity Strings -->
    <string name="select_image">select image</string>
    <string name="add_marker">Add Marker</string>
    <string name="am_name">Name: </string>
    <string name="hint_address">Address</string>
    <string-array name="amenity_array">
        <item>Fast-Food Restaurant</item>
        <item>Food Stall</item>
        <item>Entertainment</item>
        <item>Printing Service</item>
        <item>ATM</item>
        <item>Trash Bin</item>
        <item>Landmark</item>
    </string-array>
    <string name="btn_add">Add</string>
    <string name="btn_cancel">Cancel</string>

    <!-- EditMarkerActivity Strings -->
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="edit_marker">Edit Marker</string>

    <string name="btn_submit">Submit</string>
    <string name="rate_review_placeholder">Write your review...</string>

    <string name="recenter">Recenter map</string>
</resources>