<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color"
    android:fadeScrollbars="true"
    android:isScrollContainer="true"
    android:scrollIndicators="end"
    android:scrollbars="vertical"
    android:verticalScrollbarPosition="defaultPosition"
    tools:context=".RegisterActivity">

    <FrameLayout
        android:id="@+id/fl_app_logo2"
        android:layout_width="115dp"
        android:layout_height="115dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05">

        <ImageView
            android:id="@+id/iv_app_logo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_logo"
            app:srcCompat="@drawable/img_dlsu_star" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_app_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/color5"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_app_logo2" />

    <LinearLayout
        android:id="@+id/ll_register_layout"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name2"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tv_register_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@color/color5"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ll_register_username_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@color/color">

            <ImageView
                android:id="@+id/iv_register_username_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0"
                android:contentDescription="@string/enter_username"
                app:srcCompat="@drawable/ic_user" />

            <EditText
                android:id="@+id/et_register_username_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/hint_username"
                android:importantForAutofill="no"
                android:inputType="text|textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_am_location_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@color/color"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_register_id_no_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0"
                android:contentDescription="@string/enter_id_no"
                app:srcCompat="@drawable/ic_id_number" />

            <EditText
                android:id="@+id/et_register_id_no_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/hint_id_no"
                android:importantForAutofill="no"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_register_email_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@color/color"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_register_email_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/enter_dlsu_email"
                app:srcCompat="@drawable/ic_email" />

            <EditText
                android:id="@+id/et_register_email_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/hint_dlsu_email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_register_password_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@color/color"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_register_password_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/enter_password"
                app:srcCompat="@drawable/ic_password" />

            <EditText
                android:id="@+id/et_register_password_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/hint_password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_register_confirm_password_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@color/color"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_register_confirm_password_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/enter_confirm_password"
                app:srcCompat="@drawable/ic_password" />

            <EditText
                android:id="@+id/et_register_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/hint_confirm_password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/color5"
            android:text="@string/signup"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/ll_login_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:background="@color/color5"
            android:orientation="vertical"
            android:padding="1dp">

            <TextView
                android:id="@+id/tv_login_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/login_text"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_go_to_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:text="@string/login_here"
                android:textColor="@color/color5" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>