<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_rate_and_review_header"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_marginBottom="10dp"
        android:background="@color/color1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ib_rate_and_review_back_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_back" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/ll_rate_and_review_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_rate_and_review_star"
                    android:layout_width="24dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:contentDescription="@string/directory_rate_contentDesc"
                    tools:srcCompat="@drawable/ic_star" />

                <TextView
                    android:id="@+id/tv_rate_and_review_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="0"
                    android:text="@string/directory_rate_title"
                    android:textColor="@color/color5"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <RatingBar
                android:id="@+id/rb_user_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="false"
                android:numStars="5"
                android:stepSize="1.0" />

            <EditText
                android:id="@+id/et_user_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:hint="@string/rate_review_placeholder"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:lines="6"
                android:maxLines="10" />

            <Button
                android:id="@+id/btn_rate_and_review_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/color5"
                android:text="@string/btn_submit"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_rate_review_select_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/color5"
                android:padding="10dp"
                android:text="@string/select_image"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/iv_rate_review_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/review_image" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
