<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color"
    tools:context=".LoginActivity">

    <FrameLayout
        android:id="@+id/fl_app_logo"
        android:layout_width="115dp"
        android:layout_height="115dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05">

        <ImageView
            android:id="@+id/iv_app_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_logo"
            app:srcCompat="@drawable/img_dlsu_star" />
    </FrameLayout>

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/color5"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fl_app_logo" />

    <LinearLayout
        android:id="@+id/ll_login_layout"
        android:layout_width="343dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_app_name"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tv_login_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="30dp"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/color5"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ll_login_id_no_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@color/color"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_login_id_no_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0"
                android:contentDescription="@string/enter_id_no"
                tools:srcCompat="@drawable/ic_id_number" />

            <EditText
                android:id="@+id/et_login_id_no_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/hint_id_no"
                android:importantForAutofill="no"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_login_password_layout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@color/color"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_login_password_icon"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="0"
                android:contentDescription="@string/enter_password"
                tools:srcCompat="@drawable/ic_password" />

            <EditText
                android:id="@+id/et_login_password_value"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/hint_password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/color5"
            android:contentDescription="@string/btn_login"
            android:text="@string/login"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/ll_register_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:background="@color/color6"
            android:orientation="vertical"
            android:padding="1dp">

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:contentDescription="@string/btn_register"
                android:text="@string/btn_register"
                android:textColor="@color/color5" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>