<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color"
    android:orientation="vertical"
    tools:context=".EditMarkerActivity">

    <FrameLayout
        android:id="@+id/ll_em_header"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:background="@color/color1">

        <ImageButton
            android:id="@+id/ib_em_back_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_back" />

        <ImageButton
            android:id="@+id/ib_em_delete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btn_delete"
            android:src="@drawable/ic_delete" />

    </FrameLayout>

    <ScrollView
        android:id="@+id/sv_em"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/ll_em_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_em_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="250dp" >

                <ImageView
                    android:id="@+id/iv_em_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/dl_img_contentDesc"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>
            <Button
                android:id="@+id/btn_em_select_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/color5"
                android:padding="5dp"
                android:text="@string/select_image"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <LinearLayout
                android:id="@+id/ll_em_layout"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="25dp">

                <TextView
                    android:id="@+id/tv_em_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:text="@string/edit_marker"
                    android:textAllCaps="true"
                    android:textColor="@color/color5"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/ll_em_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/color">

                    <TextView
                        android:id="@+id/tv_em_name_label"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/am_name"
                        android:textColor="@color/color5"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/et_em_name_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:hint="@string/dl_name_placeholder"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textColor="@color/color5"
                        android:textColorHint="@color/color2" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_em_location_layout"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/color"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_em_location_label"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/dl_location"
                        android:textColor="@color/color5"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/et_em_location_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:ems="10"
                        android:hint="@string/hint_address"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textColor="@color/color5"
                        android:textColorHint="@color/color2" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_em_tag_layout"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/color"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_em_tag_label"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/dl_tag"
                        android:textColor="@color/color5"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/spn_em_tag_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_em_btn_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_em_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:background="@color/color5"
                        android:text="@string/btn_cancel"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/btn_em_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/color5"
                        android:text="@string/btn_edit"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>